fix: change body overflow property

--- a/photo-filter/style.css
+++ b/photo-filter/style.css
@@ -11,8 +11,8 @@ body {
   min-height: 100vh;
   background-color: #313940;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-  /* overflow-x: hidden; */
-  overflow: hidden;
+  overflow-x: hidden;
+  /* overflow: hidden; */
 }
 .canvas {
   display: none;
